--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
+<html>
+    <head>
+        <title>
+            JoGym
+        </title>
+        <article>
+            <h1>Introduction to JoGym</h1><br>
 
+            <img src="https://ichef.bbci.co.uk/news/976/cpsprodpb/2E24/production/_113321811_gymgroup.jpg"/> <br><br>
+            <b>What is a JoGym?</b><br>
+            A JoGym - physical exercises and activities performed 
+            inside, often using equipment, especially when done 
+            as a subject at school. JoGymnasium is a large room with 
+            equipment for exercising the body and increasing strength 
+            or a club where you can go to exercise and keep fit.<br>
+
+            A JoGym is a JoGymnasium, also known as health club and fitness centre. 
+            JoGymnasiums have moved away just being a location for JoGymnastics. 
+            Where they had JoGymnastics apparatus such as bar bells, parallel bars, 
+            jumping boards and running path etc. <br><br>
+        </article>
+    </head>
+    <body>
+        <header>
+            <b>Benefits of JoGym:</b>
+            <ol>
+                <li> It can make you feel happier. </li>
+                <li> It can help with weight loss. </li>
+                <li> It is good for your muscles and bones.</li>
+                <li> It can increase your energy levels.</li>
+            </ol>
+        </header>
+        <main>
+            What can I expect?
+            <ul>
+                <li>Free weights</li>
+                <li>Cardiovascular</li>
+                <li>Classes</li>
+            </ul>
+            
+        </main>
+        <footer>
+            <b>Accessibility:</b><br>
+            You may want to take into account the distance 
+            from your home and or work. As the further away 
+            it is the less convenient it may become.<br>
+        </footer>
+        <section>
+            <nav>
+                <a href="file:///C:/Users/Ramtha_PC/Desktop/new/index.html"> Click here to to go to my partner's page. </a>
+            </nav>
+        </section>
+
+    </body>
+</html>
