--- a/index.html
+++ b/index.html
@@ -72,37 +72,37 @@
             </section>
          
             <section id = 'buy-now'>
-                <h1 id = "IPhone & AirPods">
-                    IPhone & AirPods
+                <h1 id = "IPhone & More">
+                    IPhone & More
                 </h1>
                 <div class="column">
                     <div class="card">
-                        <span><h4>Type: </h4><p>Dog</p></span>
-                        <span><h4>Price:</h4><p>200</p></span>  
+                        <span><h4>Type: </h4><p>Apple watch 3</p></span>
+                        <span><h4>Price:</h4><p>199$ only</p></span>  
                         <img style="width: 270px;height: 200px;" src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/holiday-pw-watchs3-202011?wid=632&hei=540&fmt=jpeg"/>
                         <button onclick="addToCart('Apple watch 3',199$ only)" >Add to cart</button>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
-                        <span><h4>Type: </h4><p>Cat</p></span>
-                        <span><h4>Price:</h4><p>50</p></span>
+                        <span><h4>Type: </h4><p>IPhone 11</p></span>
+                        <span><h4>Price:</h4><p>499$ only</p></span>
                         <img  style="width: 270px;height: 200px;" src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone11-select-2019-family?wid=882&amp;hei=1058&amp;fmt=jpeg"/>
                         <button onclick="addToCart('IPhone 11',499$ only)">Add to cart</button>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
-                        <span><h4>Type: </h4><p>Bird</p></span>
-                        <span><h4>Price:</h4><p>20</p></span>
+                        <span><h4>Type: </h4><p>AirPods Max</p></span>
+                        <span><h4>Price:</h4><p>99$ only</p></span>
                         <img  style="width: 270px;height: 200px;" src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/holiday-pw-airpodsmax-202011?wid=632&hei=540&fmt=jpeg"/>
                         <button onclick="addToCart('AirPods Max',99$ only)">Add to cart</button>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
-                        <span><h4>Type: </h4><p>Fish</p></span>
-                        <span><h4>Price:</h4><p>5</p></span>
+                        <span><h4>Type: </h4><p>Apple Pencil</p></span>
+                        <span><h4>Price:</h4><p>97$ only</p></span>
                         <img  style="width: 270px;height: 200px;" src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/MK0C2?wid=532&hei=582&fmt=png"/>
                         <button  onclick="addToCart('Apple Pencil',97$ only)">Add to cart</button>
                     </div>
